--- a/repo-detail.html
+++ b/repo-detail.html
@@ -9,6 +9,7 @@
 
 	<div data-role="header">
 		<h1>Repository Details</h1>
+		<button id="saveBtn" data-icon="star" class="ui-btn-right">Save as Favorite</button>
 	</div>
 
     <div data-role="content">
@@ -22,6 +23,8 @@
             <h3 id="ownerName"></h3>
         </div>
     </div>
+    
+    
 
 </div>
 
