--- a/repo-detail.html
+++ b/repo-detail.html
@@ -8,8 +8,8 @@
 <div id="reposDetail" data-role="page" data-add-back-btn="true">
 
 	<div data-role="header">
-		<h1>Repository Details</h1>
-		<button id="saveBtn" data-icon="star" class="ui-btn-right">Save as Favorite</button>
+		<h1>Detail View</h1>
+		<button id="saveBtn" data-icon="star" class="ui-btn-right">Like</button>
 	</div>
 
     <div data-role="content">
