--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
         <div id="reposHome" data-role="page">
     <div data-role="header" data-position="fixed">
-        <h1>GitHub Search</h1>
+        <h1>Big Local</h1>
     </div>
     <div data-role="content">
         <ul id="allRepos" data-role="listview"  data-filter="true">
