--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
     </div>
 </div>
 
+<div data-role="footer" data-id="foo1" data-position="fixed">
+ <div data-role="navbar">
+ <ul>
+ <li><a href="a.html">Friends</a></li>
+ <li><a href="b.html">Albums</a></li>
+ <li><a href="c.html">Emails</a></li>
+ <li><a href="d.html" >Info</a></li>
+ </ul>
+ </div><!-- /navbar -->
+</div><!-- /footer -->
 
         
         
