--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     
     
-    <div data-role="footer" data-id="foo1" data-position="fixed">
+    <div data-role="header" data-id="foo1" data-position="fixed">
         <div data-role="navbar">
             <ul>
                 <li><a href="a.html">Friends</a></li>
@@ -49,7 +49,7 @@
                 <li><a href="d.html" >Info</a></li>
             </ul>
         </div><!-- /navbar -->
-    </div><!-- /footer -->
+    </div><!-- /header -->
 
 
 
