--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <h1>Big Local</h1>
           <div data-role="navbar">
             <ul>
-                <li><a href="a.html">Friends</a></li>
-                <li><a href="b.html">Albums</a></li>
-                <li><a href="c.html">Emails</a></li>
-                <li><a href="d.html" >Info</a></li>
+                <li><a href="index.html">News</a></li>
+                <li><a href="b.html">Events</a></li>
+                <li><a href="c.html">Links</a></li>
+                <li><a href="d.html" >Contact</a></li>
             </ul>
         </div><!-- /navbar -->
     </div>
