--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <h1>Big Local</h1>
           <div data-role="navbar">
             <ul>
-                <li><a href="index.html">News</a></li>
-                <li><a href="b.html">Events</a></li>
-                <li><a href="c.html">Links</a></li>
-                <li><a href="d.html" >Contact</a></li>
+                <li><a href="index.html" data-icon="home" data-iconpos="top">News</a></li>
+                <li><a href="b.html" data-icon="plus" data-iconpos="top">Events</a></li>
+                <li><a href="c.html"data-icon="grid">Links</a></li>
+                <li><a href="d.html" data-icon="telephone" data-iconpos="top">Contact</a></li>
             </ul>
         </div><!-- /navbar -->
     </div>
