--- a/events.html
+++ b/events.html
@@ -35,15 +35,15 @@
         <h1>Big Local</h1>
           <div data-role="navbar">
             <ul>
-                <li><a href="index.html" data-icon="home" data-iconpos="top" class="ui-btn-active">News</a></li>
-                <li><a href="b.html" data-icon="plus" data-iconpos="top">Events</a></li>
+                <li><a href="index.html" data-icon="home" data-iconpos="top">News</a></li>
+                <li><a href="events.html" data-icon="plus" data-iconpos="top" class="ui-btn-active">Events</a></li>
                 <li><a href="c.html"data-icon="grid">Links</a></li>
                 <li><a href="d.html" data-icon="telephone" data-iconpos="top">Contact</a></li>
             </ul>
         </div><!-- /navbar -->
     </div>
     <div data-role="content">
-        <ul id="allRepos" data-role="listview"  data-filter="true">
+      <!--<ul id="allRepos" data-role="listview"  data-filter="true"> -->
         </ul>
     </div>
     
