--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div data-role="navbar">
             <ul>
                 <li><a href="index.html" data-icon="home" data-iconpos="top" class="ui-btn-active">News</a></li>
-                <li><a href="b.html" data-icon="plus" data-iconpos="top">Events</a></li>
+                <li><a href="events.html" data-icon="plus" data-iconpos="top">Events</a></li>
                 <li><a href="c.html"data-icon="grid">Links</a></li>
                 <li><a href="d.html" data-icon="telephone" data-iconpos="top">Contact</a></li>
             </ul>
