--- a/events.html
+++ b/events.html
@@ -43,6 +43,8 @@
         </div><!-- /navbar -->
     </div>
     <div data-role="content">
+    
+    Events maybe here?
       <!--<ul id="allRepos" data-role="listview"  data-filter="true"> -->
         </ul>
     </div>
