--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <body>
         
         <div id="reposHome" data-role="page">
-    <div data-role="header" data-position="fixed">
+    <div data-role="header" data-position="fixed" data-tap-toggle="false" data-id="h1">
         <h1>Big Local</h1>
           <div data-role="navbar" data-tap-toggle="false" data-id="f1" data-position="fixed">
             <ul>
