--- a/events.html
+++ b/events.html
@@ -31,9 +31,9 @@
     <body>
         
         <div id="EventsHome" data-role="page">
-    <div data-role="header" data-position="fixed" data-tap-toggle="false" data-id="h1">
+    <div data-role="header" data-position="fixed" data-tap-toggle="false">
         <h1>Big Local</h1>
-          <div data-role="navbar" data-tap-toggle="false" data-id="f1" data-position="fixed">
+          <div data-role="navbar" data-tap-toggle="false" data-id="h1" data-position="fixed">
             <ul>
                 <li><a href="index.html" data-icon="home" data-iconpos="top">News</a></li>
                 <li><a href="events.html" data-icon="plus" data-iconpos="top" class="ui-btn-active">Events</a></li>
