--- a/events.html
+++ b/events.html
@@ -44,8 +44,8 @@
             <div data-role="footer" data-position="fixed">
     <div data-role="navbar" data-tap-toggle="false" data-id="footerID">
             <ul>
-                <li><a href="index.html" data-icon="home" data-iconpos="top" class="ui-btn-active">News</a></li>
-                <li><a href="events.html" data-icon="plus" data-iconpos="top">Events</a></li>
+                <li><a href="index.html" data-icon="home" data-iconpos="top">News</a></li>
+                <li><a href="events.html" data-icon="plus" data-iconpos="top" class="ui-btn-active">Events</a></li>
                 <li><a href="c.html"data-icon="grid">Links</a></li>
                 <li><a href="d.html" data-icon="telephone" data-iconpos="top">Contact</a></li>
             </ul>
