--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
         <h1>Big Local</h1>
         
-         <div data-role="navbar" data-tap-toggle="false" data-id="footerID">
+         <div data-role="navbar" data-position="fixed" data-tap-toggle="false" data-id="footerID">
             <ul>
                 <li><a href="index.html" data-icon="home" data-iconpos="top" class="ui-btn-active">News</a></li>
                 <li><a href="events.html" data-icon="plus" data-iconpos="top">Events</a></li>
