--- a/events.html
+++ b/events.html
@@ -35,7 +35,7 @@
     
         <h1>Big Local</h1>
           
-            <div data-role="navbar" data-tap-toggle="false" data-id="footerID">
+            <div data-role="navbar" data-position="fixed" data-tap-toggle="false" data-id="footerID">
             <ul>
                 <li><a href="index.html" data-icon="home" data-iconpos="top">News</a></li>
                 <li><a href="events.html" data-icon="plus" data-iconpos="top" class="ui-btn-active">Events</a></li>
