--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <body>
         
         <div id="reposHome" data-role="page">
-    <div data-role="header" data-position="fixed" data-tap-toggle="false">
+    <div data-role="header" data-position="fixed" data-id="headerID">
         <h1>Big Local</h1>
     </div>
     
