--- a/events.html
+++ b/events.html
@@ -53,7 +53,7 @@
         </div><!-- /navbar -->
     </div>
 
-
+</div>
         
         
         <script type="text/javascript" src="phonegap.js"></script>
