--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a href="index.html" data-icon="home" data-iconpos="top" class="ui-btn-active">News</a></li>
                 <li><a href="events.html" data-icon="plus" data-iconpos="top">Events</a></li>
                 <li><a href="c.html"data-icon="grid">Links</a></li>
-                <li><a href="d.html" data-icon="telephone" data-iconpos="top">Contact</a></li>
+                <li><a href="d.html" data-icon="plus" data-iconpos="top">Contact</a></li>
             </ul>
         </div><!-- /navbar -->
     </div>
