--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
      <div data-role="footer" data-tap-toggle="false" data-id="footerID" data-position="fixed">
       <div data-role="navbar" >
             <ul>
-                <li><a href="index.html" data-icon="home" data-iconpos="top">News</a></li>
-                <li><a href="events.html" data-icon="plus" data-iconpos="top">Events</a></li>
+                <li><a href="#reposHome" data-icon="home" data-iconpos="top">News</a></li>
+                <li><a href="#eventsPage" data-icon="plus" data-iconpos="top">Events</a></li>
                 <li><a href="c.html"data-icon="grid">Links</a></li>
                 <li><a href="d.html" data-icon="plus" data-iconpos="top">Contact</a></li>
             </ul>
