--- a/events.html
+++ b/events.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         
-        <div id="EventsHome" data-role="page">
+        <div id="eventsPage" data-role="page">
         
     <div data-role="header" data-position="fixed" data-id="headerID">
         <h1>Big Local</h1>
@@ -52,8 +52,8 @@
     <div data-role="footer" data-tap-toggle="false" data-id="footerID" data-position="fixed">
       <div data-role="navbar" >
             <ul>
-                <li><a href="index.html" data-icon="home" data-iconpos="top">News</a></li>
-                <li><a href="events.html" data-icon="plus" data-iconpos="top">Events</a></li>
+                <li><a href="#reposHome" data-icon="home" data-iconpos="top">News</a></li>
+                <li><a href="#eventsPage" data-icon="plus" data-iconpos="top">Events</a></li>
                 <li><a href="c.html"data-icon="grid">Links</a></li>
                 <li><a href="d.html" data-icon="plus" data-iconpos="top">Contact</a></li>
             </ul>
